fix: added min height for products on mobile

--- a/app/assets/stylesheets/side_bar_nav.sass
+++ b/app/assets/stylesheets/side_bar_nav.sass
@@ -211,3 +211,5 @@ body
     transition: 0.5s !important
   .search-result-empty-text
     font-size: 18px
+  .title-container
+    min-height: 38px !important
